--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^11.2.1
   provider: ^6.0.5
   flutter_svg: ^2.0.5
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
