--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   provider: ^6.0.5
   flutter_svg: ^2.0.5
   image_picker: ^0.8.7+5
+  uuid: ^3.0.7
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
